--- a/frontend/src/app/styles/index.css
+++ b/frontend/src/app/styles/index.css
@@ -5,3 +5,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
