--- a/frontend/src/pages/event/styles.module.css
+++ b/frontend/src/pages/event/styles.module.css
@@ -1,110 +1,61 @@
-.card {
-  display: flex;
-  flex-direction: column;
-  color: inherit;
-  text-decoration: none;
-  min-height: 248px;
-  height: 100%;
-  overflow-x: hidden;
-  transition: transform 0.4s ease;
-  border-radius: 24px;
-
-  &:hover {
-    transform: scale(0.98);
-  }
-
-  box-shadow:
-    0 4px 24px rgb(0 0 0 / 5%),
-    0 2px 8px rgb(0 0 0 / 5%);
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 24px;
+  padding-bottom: 48px;
 }
 
-.cover {
+.inner {
+  display: flex;
+  align-items: center;
+  border-radius: 24px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   position: relative;
-  height: 220px;
   overflow: hidden;
-  border-radius: 20px;
-  margin: 4px;
 }
 
 .img {
+  pointer-events: none;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.chips {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  top: 10px;
-  right: 12px;
-  pointer-events: none;
-}
-
-.chip {
-  font-size: 12;
-  font-weight: 500;
-
-  &.indigo {
-    color: white;
-    background-color: #7c86fe;
-  }
-
-  &.gray {
-    color: black;
-    background-color: #f2f3f7;
-  }
-}
-
-.inner {
+.stack {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 24px 32px 32px;
-  font-size: 16px;
-  line-height: 20px;
-  flex: 1;
+  gap: 18px;
 }
 
-.subtitle {
-  font-size: 16px;
-  line-height: 20px;
-  padding-bottom: 4px;
-  font-weight: 500;
-}
-
-.title {
-  font-size: 20px;
-  line-height: 24px;
-  margin-bottom: 8px;
-  font-weight: 500;
-}
-
-.description {
-  font-size: 15px;
-}
-
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 26px;
-  line-height: 1;
-}
-
-.time {
-  display: flex;
-  align-items: center;
-  gap: 4px;
+.name {
+  margin: 0px;
 }
 
 .place {
-  display: flex;
-  align-items: center;
-  gap: 4px;
+  margin: 0;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 1.2;
+}
 
-  &:hover {
-    text-decoration: underline;
-  }
+.desc {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+
+
+.title {
+  font-size: 24px;
+  font-weight: 500;
+  margin: 0px;
+}
+
+
+.chips {
+  display: flex;
+  gap: 8px;
 }
